<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@drawable/wallpaper">

    <ImageView
        android:layout_marginVertical="10dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"/>

    <Button
        android:id="@+id/dzikirpagi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/DzikirPagi"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:textColor="#1F84DD"
        android:layout_marginVertical="5dp"/>

    <Button
        android:id="@+id/dzikirpetang"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/DzikirPetang"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:textColor="#1E88E5"
        android:layout_marginVertical="5dp" />

    <Button
        android:id="@+id/doaharian"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/DoaHarian"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:textColor="#1E88E5"
        android:layout_marginVertical="5dp"  />

    <Button
        android:id="@+id/dzikirsetelahsholat"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/DzikirSetelahSholat"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:textColor="#1E88E5"
        android:layout_marginVertical="5dp"
        android:paddingVertical="5dp"/>

    <Button
        android:id="@+id/about"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Tentang"
        android:background="@drawable/button"
        android:textSize="20sp"
        android:textColor="#1E88E5"
        android:layout_marginVertical="5dp" />

</LinearLayout>