<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".About">



    <TextView
        android:id="@+id/JudulTentang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/JudulTentang"
        android:textSize="30sp"
        android:background="@drawable/gradient"/>

    <TextView
        android:id="@+id/TentangAplikasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/TentangAplikasi"
        android:textSize="20sp"
        android:background="@drawable/gradient"/>

    <Button
        android:layout_gravity="end"
        android:id="@+id/btnPembuat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/TentangPembuat"
        android:textSize="15sp"
        android:background="@drawable/gradient"/>

</LinearLayout>